Move "list of ..." to same page

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -99,8 +99,8 @@ Date: {\today}
 \tableofcontents
 
 \listoffigures
-\listoftables
-\listoflistings
+{\let\clearpage\relax \listoftables}
+{\let\clearpage\relax \listoflistings}
 
 
 % Aufgabenstellung
