Remove Co-Examiner

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -78,8 +78,7 @@ University of Applied Sciences Rapperswil (HSR)\\
 
 % Author and advisor
 Author: Florian Bruhin\\[0.3cm]
-Advisor: Prof.~Stefan Keller, HSR\\[0.3cm]
-External Co-Examiner: Claude Eisenhut, Eisenhut Informatik AG
+Advisor: Prof.~Stefan Keller, HSR
 
 % Bottom of the page
 \vfill
