--- a/doc/main.tex
+++ b/doc/main.tex
@@ -111,11 +111,11 @@ Date: {\today}
 
 \section{Background}
 
-The qutebrowser project is a web browser which is focused on being
-keyboard-driven and having a minimal user interface. It is aimed at power users
-who value customizability and efficiency, but are willing to accept a rather
-steep learning curve compared to ``traditional'' web browsers such as
-Mozilla~Firefox or Google~Chrome.
+The qutebrowser project is a web browser, comparable to Google Chrome or Mozilla
+Firefox, which is focused on being keyboard-driven and having a minimal user
+interface. It is aimed at power users who value customizability and efficiency,
+but are willing to accept a rather steep learning curve compared to
+``traditional'' web browsers.
 
 Its philosophy and keybindings are inspired by the Vim
 editor\footnote{\url{https://www.vim.org/}} which is available on almost any
