--- a/doc/main.tex
+++ b/doc/main.tex
@@ -135,6 +135,8 @@ It is difficult to estimate qutebrowser's user count, but it is most likely used
 couple thousand users, so an extension API is also vital in order to be able to move
 less popular features out of the core part of qutebrowser.
 
+\fixme{Make clear that we're dealing with existing engines, maybe name, maybe motivation?}
+
 \label{backends}
 There are two backends (rendering engines) which can be used with qutebrowser:
 
