Update meeting notes

--- a/meetings/2018-12-11.md
+++ b/meetings/2018-12-11.md
@@ -34,4 +34,27 @@
   - Sphinx (API-Dokumentation)
   - Doku (Implementation, Testing, Results, Abstracts)
   - ev. zweites API-Review?
+    - Verschoben auf anfangs BA
   - ev. Release (lieber: auf PyQt 5.12 warten)
+    - Verschoben auf 5.12 release
+  
+# Fragen & Antworten
+
+- Abgabe Poster: Nur online?
+  -> ja, Stefan braucht keins (ev. auf USB-Stick)
+- Abstracts: Alle englisch?
+  -> ja
+- *Kein* Experte, Themengebiet Software
+- Sprach-Review vor Dienstag
+- Archivdatei: Welche Unterlagen?
+- Meeting-Notes in Doku?
+- Inhalt Archivdatei
+  - Sourcecode
+  - Doku + LaTeX-Sources
+  - Meeting notes
+  - Eigenständigkeitserklärung etc.
+  - Aufgabenstellung
+  - Poster
+- Plain-Text Abstract auf archiv-i: Wissenschaftlicher Abstract aus Arbeit
+- Keine Meeting Notes in Doku
+- Nächste Sitzung: 08:50 statt 08:30
