--- a/doc/main.tex
+++ b/doc/main.tex
@@ -195,7 +195,7 @@ qutebrowser's GitHub repository. The biggest planned changes are the following:
     documentation and ceased maintenance. An external contributor (see page
     \pageref{fiete}) is currently working on migrating to the
     Sphinx\footnote{\url{http://www.sphinx-doc.org/}} toolchain, and should be
-    supported with his work throughout the SA.
+    supported with his work throughout the SA. \fixme{update}
   \item \url{https://github.com/qutebrowser/qutebrowser/issues/640}: \\
     Global objects are registered in a object registry based on a name as
     string (``stringly-typed''\footnote{\url{http://wiki.c2.com/?StringlyTyped}}).
@@ -354,7 +354,7 @@ planned\footnote{\url{https://github.com/qutebrowser/qutebrowser/issues/345}}
 since December 2014, so his help with tackling this is very much appreciated.
 This project will benefit from his work, as Sphinx, unlike asciidoc, is a
 very good fit for documenting APIs. His work is clearly marked as such in this
-documentation.
+documentation. \fixme{update}
 
 % Prozessmodel
 \section{Process Model}
@@ -431,6 +431,8 @@ is allotted as shown in figure \ref{img:schedule}.
   \label{img:schedule}
 \end{figure}
 
+\fixme{feature freeze}
+
 Due to the relatively long \emph{preparation} phase at the beginning of the
 project, the \emph{construction} phase gets unusually short. This is
 unfortunate but unavoidable -- it's important to integrate existing
@@ -459,7 +461,7 @@ The following risks have been identified in this project:
     contributions yet & 3 \\
     \hline
     Migrating documentation toolchain to Sphinx (done by external contributor)
-    is not done in time & Initial extension API documentation can be separate from
+    is not done in time \fixme{update }& Initial extension API documentation can be separate from
     qutebrowser documentation & 3 \\
     \bottomrule
   \end{tabulary}
@@ -1923,7 +1925,7 @@ understanding when I couldn't attend to their contributions in a timely manner
 while working on this project. I'd especially like to thank Fritz~Reichwald for
 his contributions towards switching to the Sphinx documentation generator, and
 our careful coordination in order to not interfere with my own work on this
-project.
+project. \fixme{update}
 
 Thanks to AnneMarie~O'Neill for her careful English reviews and constructive
 feedback on possible improvements. Her suggestions were always very welcome and
