--- a/doc/main.tex
+++ b/doc/main.tex
@@ -247,13 +247,13 @@ documented in section \ref{tabapi}.
 \label{vision}
 
 Many qutebrowser users are power-users and, as such, have very specific (and
-sometimes unique) feature requests and workflows. It should be made possible for
+sometimes unique) feature requests and workflows. It should be possible for
 those users to extend qutebrowser with custom extensions in an easy way, in order
 to keep qutebrowser's core small.
 
 Since qutebrowser already has a thriving community, this change also intends to
-decentralize development efforts, as it enables power-users and
-developers to maintain their extensions independently from the core development.
+decentralize development efforts, as it enables users and developers to maintain
+their extensions independently from the core development.
 
 % Ziele und Unterziele
 \section{Goals}
