--- a/doc/main.tex
+++ b/doc/main.tex
@@ -1223,7 +1223,7 @@ The tab API is grouped into various classes:
   \end{class}
   \mycomposition{Tab}{}{}{TabData}{}{}
 \end{tikzpicture}
-\caption{Class diagram for tab API}
+\caption{Class diagram for existing tab API}
 \end{figure}
 
 With the exception of \verb|TabData| which is backend-agnostic, all those
@@ -1578,9 +1578,9 @@ those APIs, and the private API can still be documented properly.
   \end{class}
   \mycomposition{Tab}{}{}{Action}{}{}
 
-  \begin{class}[text width=2cm]{Data}{10,2}
+  \begin{class}[text width=2cm]{TabData}{10,2}
   \end{class}
-  \mycomposition{Tab}{}{}{Data}{}{}
+  \mycomposition{Tab}{}{}{TabData}{}{}
 \end{tikzpicture}
 \caption[Class diagram for refactored tab API]{Class diagram for refactored tab
   API, with added classes highlighted}
