--- a/doc/main.tex
+++ b/doc/main.tex
@@ -4,7 +4,6 @@
 \usepackage{cmbright}
 \usepackage[utf8]{inputenc}
 \usepackage{hyperref}
-\usepackage{booktabs}
 \usepackage{graphicx}
 \usepackage{minted}
 \usepackage{microtype}
@@ -14,6 +13,9 @@
 \usepackage[page]{appendix}
 \usepackage{pdfpages}
 \usepackage{multicol}
+
+\usepackage{booktabs}
+\renewcommand{\arraystretch}{1.3}
 
 % https://tex.stackexchange.com/a/28334/28697
 \usepackage{chngcntr}
