--- a/doc/main.tex
+++ b/doc/main.tex
@@ -324,6 +324,8 @@ contributions (pull requests) which were already open. For the rest of the SA,
 such contributions will be dealt with on a best effort basis, with the main
 focus being this documentation and the work required for the extension API.
 
+\fixme{Describe Python decorators, packages/modules, Qt signals/slots}
+
 % Vorgehen, Aufbau der Arbeit
 \section{Methods and Structure}
 \subsection{Structure of this document}
