--- a/doc/main.tex
+++ b/doc/main.tex
@@ -1,4 +1,5 @@
-\documentclass[a4paper,parskip=full]{scrreprt}
+\documentclass[a4paper,parskip=full,DIV=14,BCOR=15mm]{scrreprt}
+%\usepackage{showframe}
 
 \usepackage[T1]{fontenc}
 \usepackage{cmbright}
@@ -13,6 +14,7 @@
 \usepackage[page]{appendix}
 \usepackage{pdfpages}
 \usepackage{multicol}
+\interfootnotelinepenalty=10000
 
 \usepackage{booktabs}
 \renewcommand{\arraystretch}{1.3}
@@ -38,9 +40,6 @@ node[near end, above]{#2}
 node[near end, below]{#3};
 }
 
-%\usepackage{showframe}
-\usepackage{geometry}
-%\geometry{top=2cm,bottom=2.5cm,includeheadfoot}
 \setlist{parsep=10pt}
 
 \newcommand{\py}[1]{\mintinline{python}{#1}}
@@ -98,7 +97,8 @@ Date: {\today}
 
 \end{titlepage}
 
-
+\KOMAoptions{twoside}
+\raggedbottom
 
 \chapter*{Abstract}
 
@@ -2327,7 +2327,6 @@ stuck somewhere.
 
 \renewcommand{\bibname}{\chapter{Literature and Sources}}
 \printbibliography
-\fixme{fit on one page}
 \end{appendices}
 
 \end{document}
