--- a/doc/main.tex
+++ b/doc/main.tex
@@ -1974,18 +1974,16 @@ This resulted in the following modules being fully annotated (in addition to
 some being partially annotated):
 
 \begin{itemize}[parsep=5pt]
-  \item \verb|browser.browsertab| (``tab API'')
-  \item \verb|browser.webelem|, \verb|browser.webkit.webkitelem|,
-    \verb|browser.webengine.webenginelem| (``web element API'')
-  \item \verb|misc.objects|
-  \item \verb|commands.cmdutils| (registering commands)
-  \item All modules in the \verb|qutebrowser.config| package (\verb|config|, \verb|configcache|,
-    \verb|configcommands|, \verb|configdata|, \verb|configdiff|,
-    \verb|configexc|, \verb|configfiles|, \verb|configinit|, \verb|configtypes|,
-    \verb|configutils|, \verb|websettings|).
-  \item All modules in the \verb|qutebrowser.api| package (see section \ref{sec:important})
-  \item All modules in the \verb|qutebrowser.components| package (see section \ref{sec:important})
-  \item All modules in the \verb|qutebrowser.extension| package (see section \ref{sec:important})
+  \item \texttt{browser.browsertab} (``tab API'')
+  \item \texttt{browser.webelem}, \texttt{browser.webkit.webkitelem},
+    \texttt{browser.webengine.webenginelem} (``web element API'')
+  \item \texttt{misc.objects} and \texttt{commands.cmdutils} (registering commands)
+  \item All modules in the \texttt{config} package: \\ \texttt{config}, \texttt{configcache},
+    \texttt{configcommands}, \texttt{configdata}, \texttt{configdiff},
+    \texttt{configexc}, \\ \texttt{configfiles}, \texttt{configinit}, \texttt{configtypes},
+    \texttt{configutils}, \texttt{websettings}.
+  \item All modules in the \texttt{api}, \texttt{components}
+    and \texttt{extensions} sub-packages (see section \ref{sec:important})
 \end{itemize}
 
 
@@ -2217,23 +2215,25 @@ changes) is shown in table \ref{tab:coverage}.
     & apitypes.py & 100 & \\
     & cmdutils.py & 100 & \\
     & config.py & 100 & \\
-    & downloads.py & 70 & \fixme{} \\
+    & downloads.py & 70 & Requires a download manager object for which no
+                          stub/mock exists yet. \\
     & hook.py & 90 & \\
     & interceptor.py & 100 & \\
-    & downloads.py & 100 & \strut\vspace{0.5em} \\
+    & downloads.py & 100 & \strut\vspace{2.5em} \\
     components/ & \emph{Average} & 85 & \\
     & adblock.py & 93 & \\
     & caretcommands.py & 82 & \\
-    & misccommands.py & 73 & \fixme{} \\
+    & misccommands.py & 73 & Some commands (like printing) contain
+                             GUI-interactions which are hard to test. \\
     & scrollcommands.py & 96 & \\
-    & zoomcommands.py & 85 & \strut\vspace{0.5em} \\
-    extensions/ & \emph{Average} & 89 \\
-    & interceptors.py & 94 \\
-    & loader.py & 88 \\
-    browser/ & browsertab.py & 87 \\
-    commands/ & command.py & 89 \\
+    & zoomcommands.py & 85 & \strut\vspace{2.5em} \\
+    extensions/ & \emph{Average} & 89 & \\
+    & interceptors.py & 94 & \\
+    & loader.py & 88 & \strut\vspace{2.5em} \\
+    browser/ & browsertab.py & 87 & \\
+    commands/ & command.py & 89 & \\
     \midrule
-    Average & & 90 \\
+    Average & & 90 & \\
     \bottomrule
   \end{tabulary}
   \caption{Test coverage for added/changed modules}
@@ -2245,9 +2245,24 @@ Based on this data, the goal of surpassing the existing average coverage of 80\%
 was met: In the files relevant to this SA, an average test coverage of 90\% has
 been achieved.
 
+A test output log can be found in appendix \ref{ch:testlog}.
+
 % Manuelle Testverfahren, etc.
 \section{Manual Testing}
+The following tests were (successfully) performed manually, since related
+automated tests were insufficient:
 
+\begin{itemize}[parsep=5pt]
+  \item Updating adblock filter lists via the \verb|:adblock-update| command;
+    verifying that lists are downloaded correctly and a \texttt{adblock: Read ...
+    hosts from 1 sources.} message is shown.
+  \item Verifying that visiting a website containing ads
+    (\url{https://www.20min.ch/}) is displayed without ads.
+  \item Running \verb|:print| to display the print dialog and printing the
+    website into a PDF file.
+  \item Using the \verb|:print --pdf| file to generate a PDF file directly.
+  \item Verifying that those PDF files look correct.
+\end{itemize}
 
 % Resultate, Bewerung und Ausblick
 \chapter{Results}
@@ -2397,6 +2412,52 @@ stuck somewhere.
 \label{ch:sphinx}
 \fixme{some text}
 \includepdf[pages=5-18,trim=0 2cm 0 1.8cm,clip,pagecommand=,offset=0 1cm]{./img/sphinx.pdf}
+
+\chapter{Test log}
+\label{ch:testlog}
+\begin{minted}{text}
+========================== test session starts ==========================
+platform linux -- Python 3.7.1, pytest-4.0.1, py-1.7.0, pluggy-0.8.0
+cachedir: .tox/py37/.pytest_cache
+PyQt5 5.11.3 -- Qt runtime 5.12.0 -- Qt compiled 5.12.0
+benchmark: 3.1.1 (defaults: [...])
+hypothesis profile 'default' -> [...]
+rootdir: /home/florian/proj/qutebrowser/git, inifile: pytest.ini
+plugins: xvfb-1.1.0, travis-fold-1.3.0, rerunfailures-5.0, repeat-0.7.0,
+  qt-3.2.1, mock-1.10.0, instafail-0.4.0, faulthandler-1.5.0, cov-2.6.0,
+  benchmark-3.1.1, bdd-3.0.0, hypothesis-3.82.5
+collected 195 items
+
+tests/unit/api/test_cmdutils.py ..........................................
+                                ...................
+tests/unit/components/test_adblock.py ..............................
+tests/unit/components/test_misccommands.py .....
+tests/unit/extensions/test_loader.py ............
+tests/unit/browser/webengine/test_webenginetab.py .....
+tests/end2end/features/test_caret_bdd.py ...........
+tests/end2end/features/test_scroll_bdd.py ..................s.............
+                                          ...................
+tests/end2end/features/test_zoom_bdd.py ...............x....
+
+
+--------------- benchmark: 1 tests ---------------
+Name (time in us)             Min      Max  Median
+--------------------------------------------------
+test_adblock_benchmark     3.3040  40.3980  3.4670
+--------------------------------------------------
+
+Legend:
+  Outliers: 1 Standard Deviation from Mean; 1.5 IQR (InterQuartile Range)
+            from 1st Quartile and 3rd Quartile.
+  OPS: Operations Per Second, computed as 1 / Mean
+=========== 193 passed, 1 skipped, 1 xfailed in 44.72 seconds ===========
+\end{minted}
+
+Tests marked with \emph{s}/\emph{skipped} were skipped because of
+platform/environment differences. Tests marked with \emph{x}/\emph{xfailed} were
+expected to fail due to known bugs.
+
+Note only the subset of tests relevant to this project was ran.
 
 \renewcommand{\bibname}{\chapter{Literature and Sources}}
 \printbibliography
