minted: use normal font for listings

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -6,7 +6,6 @@
 \usepackage[utf8]{inputenc}
 \usepackage{hyperref}
 \usepackage{graphicx}
-\usepackage{minted}
 \usepackage{microtype}
 \usepackage{pgfgantt}
 \usepackage{tabulary}
@@ -15,6 +14,8 @@
 \usepackage{multicol}
 \interfootnotelinepenalty=10000
 
+\usepackage{minted}
+\renewcommand{\listingscaption}{\normalfont{}Listing}
 
 \usepackage{booktabs}
 \renewcommand{\arraystretch}{1.3}
